--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <script>
     const chat = document.getElementById('chat');
     const input = document.getElementById('input');
-    const API_KEY = "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";
+    const API_KEY = ";
 
     const messages = [];
 
